@@ -1,3 +1,8 @@
+2007-10-19  Gary Burton <gary.burton@zen.co.uk>
+	* src/DisplayTabs/_EmbeddedList.py:
+	* src/DisplayTabs/_ButtonTab.py:
+	ENTER is edit on embedded lists, issue #1296
+
 2007-10-18  Douglas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/BasicUtils/_NameDisplay.py: bug in making patterns with uppercase
 
